WIP: add steps to clean database to follow heroku limits

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.config.import=optional:file:.env[.properties]
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+
+albion.job.max.attempts=${ALBION_JOB_MAX_ATTEMPTS}
+albion.job.delay.millis=${ALBION_JOB_DELAY_MILLIS}
